@@ -5,7 +5,9 @@ compid = laptop
 uid = patches
 sign by default = True
 signing fp = FE7E1DF03EC1A278FFDC9E02BE15FA90DB57DFAC
-keyringMode = False
+recovery path = /media/
+output path = /home/patches/Desktop/Tapestry Outputs/
+keysize = 2048
 
 [Default Locations/Nix]
 docs = /home/patches/Documents
