@@ -5,7 +5,8 @@ blocksize = 4096
 expected fp = 2CE48F4C2131D5790DB7A665775104D74A766A73
 sign by default = True
 signing fp = E1229B2A2DF4F2FE50A5A23FF373FF4B43FC742F
-drive letter = E:/
+recovery path = /home/patches/Documents/Scripting_Projects/Resources/Tapestry Testbed/media
+output path = /home/patches/Desktop/Tapestry Outputs
 keysize = 2048
 
 [Default Locations/Nix]
