@@ -61,8 +61,12 @@ v0.3.0 (release):
 
 v1.0 (dev):
     -Killed KeyringMode=False with fire.
+    -The `--setup` flag is now deprecated. Please avoid use.
     -Removed internal requests for pin/passphrase to force pinentry popout.
     -Switched to UUIDs for the FID value, rather than a counter.
     --Eliminates Collisions
     -Fixed an issue with the blockbuild process that could generate empty blocks pointlessly.
     -Added `--genKey`, the new-key generation call.
+    -Began implementation of unit testing.
+    -Added "recovery path" to configuration file for testing purposes.
+    -Added "output path" to configuration file for user config.
